# mcp-sympy

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_sympy/: __init__.py  __main__.py  tools.py
tests/: __init__.py  conftest.py  test_tools.py
